--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,22 +1,40 @@
+.navbar{
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
 .navbar-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 100px;
+  padding: 10px 0;
   background-color: white;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+
+  @media (max-width: 1300px) {
+    padding: 10px 20px;
+  }
 
   .logo-container {
     margin-right: 2.5rem;
 
     .app-logo {
       width: 140px;
+
+      @media (max-width: 900px) {
+        width: 120px;
+      }
     }
   }
 
   .main-nav {
     display: flex;
     gap: 20px;
+
+    @media (max-width: 900px) {
+      display: none;
+    }
 
     .nav-item {
       position: relative;
@@ -61,7 +79,6 @@
           display: flex;
           flex-direction: column;
           gap: 5px;
-          gap: 5px;
 
           h3 {
             font-weight: bold;
@@ -103,9 +120,17 @@
     align-items: center;
     gap: 1.5rem;
 
+    @media (max-width: 900px) {
+      gap: 0.5rem;
+    }
+
     .auth-buttons {
       display: flex;
       gap: 1rem;
+
+      @media (max-width: 900px) {
+        display: none;
+      }
 
       .signup-button {
         color: #374151;
@@ -134,10 +159,13 @@
       }
     }
 
-    /* Add position: relative to the avatar container */
     .avatar-container {
       position: relative;
       display: inline-block;
+
+      @media (max-width: 900px) {
+        display: none;
+      }
     }
 
     .avatar {
@@ -181,6 +209,10 @@
 
     .powered-by-logo {
       width: 90px;
+
+      @media (max-width: 900px) {
+        display: none;
+      }
     }
   }
 }
