--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,9 @@
 .navbar-header {
   display: flex;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   justify-content: space-between;
   padding: 10px 100px;
   background-color: white;
