--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,6 +2,7 @@
     width: 100%;
     max-width: 1300px;
     margin: 0 auto;
+    border-bottom: 1px solid #e5e7eb;
 }
 
 .navbar-header {
@@ -13,7 +14,7 @@
   justify-content: space-between;
   padding: 10px 0;
   background-color: white;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+//   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
 
   @media (max-width: 1300px) {
     padding: 10px 20px;
