--- a/src/components/WebinarCard/WebinarCard.scss
+++ b/src/components/WebinarCard/WebinarCard.scss
@@ -57,21 +57,33 @@
       .info {
         margin-top: auto;
         display: flex;
-        flex-direction: column;
-        gap: 0.25rem;
+        flex-direction: row;
+        gap: 6px;
+        justify-content: space-between;
+        align-items: start;
         font-size: 0.85rem;
         color: #555;
+      }
+
+      .online-badge {
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        background-color: rgb(33, 189, 33);
+        border-radius: 50%;
+        margin-right: 14px;
+        vertical-align: middle;
       }
 
       .reserve-button {
         margin-top: 1rem;
         text-transform: none;
         font-weight: bold;
-        background-color: #1976d2;
+        background-color: #1843CE;
         color: white;
 
         &:hover {
-          background-color: #1565c0;
+          background-color: #1132a0;
         }
       }
     }
