--- a/src/components/CardCorousel/CardCarousel.scss
+++ b/src/components/CardCorousel/CardCarousel.scss
@@ -10,7 +10,7 @@
     width: max-content;
     will-change: transform;
     animation-timing-function: linear;
-    gap: 20px;
+    gap: 40px;
     padding-left: 20px;
   }
 
@@ -19,7 +19,8 @@
     flex-shrink: 0;
     background: white;
     border-radius: 12px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.07);
+    border: 1px solid #ddd;
     overflow: hidden;
     display: flex;
     flex-direction: column;
