Homepage hero section change and other ui changes

--- a/src/components/CardCorousel/CardCarousel.scss
+++ b/src/components/CardCorousel/CardCarousel.scss
@@ -1,7 +1,7 @@
 .marquee-carousel-container {
   width: 100%;
   overflow: hidden;
-  padding: 2rem 0;
+  padding: 20px 0;
   position: relative;
 
   .marquee-carousel-track {
