--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -10,24 +10,33 @@
 
   .hero-image {
     position: absolute;
-    top: 50%;
     left: 50%;
     width: 100%;
     height: auto;
     opacity: 0;
-    transform: translate(-50%, -50%) translateY(100%);
-    transition: all 1s ease-in-out;
+    transform: translateX(-50%);
+    transition: all 2s ease-in-out;
     z-index: 1;
     max-width: 100%;
+    top: 100%;
+
+    &.entering {
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      opacity: 1;
+      z-index: 3;
+    }
 
     &.active {
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
       opacity: 1;
-      transform: translate(-50%, -50%) translateY(0);
       z-index: 2;
     }
 
-    &.next-up {
-      transform: translate(-50%, -50%) translateY(100%);
+    &.exiting {
+      top: -100%;
+      transform: translateX(-50%);
       opacity: 0;
       z-index: 1;
     }
