Mobile designs complete

--- a/src/components/WebinarCard/WebinarCard.scss
+++ b/src/components/WebinarCard/WebinarCard.scss
@@ -11,6 +11,10 @@
     width: fit-content;
   }
 
+    .webinar-carousel-track::-webkit-scrollbar {
+        display: none;
+    }
+
   .webinar-card {
     width: 360px;
     flex-shrink: 0;
