--- a/src/components/CardCorousel/CardCarousel.scss
+++ b/src/components/CardCorousel/CardCarousel.scss
@@ -35,17 +35,7 @@
       .base-image {
         width: 100%;
         height: 100%;
-        object-fit: cover;
-      }
-
-      .overlay-image {
-        position: absolute;
-        bottom: 0;
-        right: 50%;
-        transform: translateX(50%);
-        height: 90%;
-        object-fit: contain;
-        object-position: bottom right;
+        object-fit: fill;
       }
 
       .bookmark-icon {
@@ -53,6 +43,7 @@
         top: 8px;
         right: 8px;
         color: #fff;
+        background-color: rgba(0, 0, 0, 0.3);
       }
     }
 
@@ -90,18 +81,6 @@
         background-color: white;
         color: #1565c0;
         box-shadow: none;
-      }
-
-      .time-indicator {
-        display: flex;
-        align-items: center;
-        color: #666;
-        font-size: 0.8rem;
-
-        svg {
-          margin-right: 4px;
-          font-size: 1rem;
-        }
       }
     }
   }
